--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
         </div>
 
         <div class="imgWrap">
-          <img class="Img" src="img/infografika-vertical.png" alt="Vyhoření je systémová chyba – infografika">
+          <img class="img" src="Img/infografika.png" alt="Vyhoření je systémová chyba – infografika">
+
           <div class="caption">Pokud v tom vidíte sebe, řešte to teď: buď stáhnout nástroj, nebo to delegovat.</div>
         </div>
       </div>
