--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
         </div>
 
         <div class="imgWrap">
-          <img class="img" src="Img/infografika.png" alt="Vyhoření je systémová chyba – infografika">
+          <img class="img" src="/Img/verze/20260209 po pruvodce prompt syndromm vyhoreni po infografika(23)_BRAND.png" alt="Vyhoření je systémová chyba – infografika">
+
 
           <div class="caption">Pokud v tom vidíte sebe, řešte to teď: buď stáhnout nástroj, nebo to delegovat.</div>
         </div>
