--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
         </div>
 
         <div class="imgWrap">
-          <img class="img" src="/Img/verze/20260209 po pruvodce prompt syndromm vyhoreni po infografika(23)_BRAND.png" alt="Vyhoření je systémová chyba – infografika">
+          <img class="Img"
+     src="Img/vyhoreni-protokol-infografika.png"
+     alt="Vyhoření není únava – systémová chyba">
 
 
           <div class="caption">Pokud v tom vidíte sebe, řešte to teď: buď stáhnout nástroj, nebo to delegovat.</div>
