--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
         </div>
 
         <div class="imgWrap">
-          <img class="Img"
-     src="Img/verze/vyhoreni-protokol-infografika.png"
-     alt="Vyhoření není únava – systémová chyba">
+         <img src="img/vyhoreni-protokol-infografika.png" alt="Vyhoření není únava – systémová chyba">
+
+          
 
 
           <div class="caption">Pokud v tom vidíte sebe, řešte to teď: buď stáhnout nástroj, nebo to delegovat.</div>
