--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
         </div>
 
         <div class="imgWrap">
-         <img src="img/vyhoreni-protokol-infografika.png" alt="Vyhoření není únava – systémová chyba">
+         <img src="img/vyhoreni-protokol-infografika.png"
+     alt="Vyhoření není únava – systémová chyba"
+     style="max-width:100%; height:auto; display:block; margin:0 auto;">
+
 
           
 
